# vlazba

./: CHANGELOG.txt  Cargo.toml  README.md
examples/: basic_usage.rs
src/: gismu_utils.rs  lib.rs  main.rs
src/jvozba/: cmavo_rafsi_list.json  cmavo_rafsi_list_exp.json  gismu_rafsi_list.json  gismu_rafsi_list_exp.json  jvokaha.rs  jvozba.rs  jvozbanarge.rs  mod.rs  permissible.json  rafsi_list.rs  scoring.rs  tools.rs
src/libs/: cli.rs  config.rs
