[package]
name = "vlazba"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
itertools = "0.10.5"
rayon = "1.7.0"
regex = "1.8.1"
serde = "1.0.163"
serde_json = "1.0.96"

[profile.release]
panic = "abort"
debug = false
