[package]
name = "vlazba"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
itertools = "0.13.0"
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
once_cell = "1.19.0"
smallvec="1.13.2"
arrayvec="0.7.4"
fnv = "1.0.7"
lazy_static = "1.5.0"
anyhow = "1.0.86"

[profile.release]
panic = "abort"
debug = false
