[package]
name = "vlazba"
version = "0.7.6"
edition = "2021"
authors = ["lagleki <gleki.is.my.name@gmail.com>"]
description = "Lojban words generator and analyzer"
license = "GPL-3.0"
repository = "https://github.com/la-lojban/vlazba"
readme = "README.md"
keywords = ["lojban", "nlp", "conlang"]
categories = ["text-processing", "parser-implementations"]

[lib]
name = "vlazba"
path = "src/lib.rs"

[[bin]]
name = "vlazba"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
itertools = "0.14.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
once_cell = "1.20.3"
anyhow = "1.0.95"
smallvec = "1.14.0"


[profile.release]
panic = "abort"
debug = false
